Add class-level concurrency for a virtually free speedup in running the tests.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 
 # Jenkins home directory when running "mvn hpi:run".
 /work
+
+# Maven surefire statistics file for determining test run order
+.surefire-*
