--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 
   <developers>
     <developer>
-      <id>craigatgoogle</id>
+      <id>craigdbarber</id>
       <name>Craig Barber</name>
       <email>craigbarber@google.com</email>
     </developer>
