--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
       Lots of boilerplate from: https://wiki.jenkins-ci.org/display/JENKINS/Hosting+Plugins
   -->
   <artifactId>google-storage-plugin</artifactId>
-  <version>1.4.1-SNAPSHOT</version>
+  <version>1.5.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <name>Google Cloud Storage plugin</name>
@@ -64,7 +64,10 @@
   <!-- Bring some sanity to version numbering... -->
   <properties>
     <jenkins.version>2.164.2</jenkins.version>
-    <google.api.version>1.24.1</google.api.version>
+    <hpi.compatibleSinceVersion>1.5.0</hpi.compatibleSinceVersion>
+    <google.api.version>1.25.0</google.api.version>
+    <google.guava.version>20.0</google.guava.version>
+    <google-oauth.version>1.0.0-SNAPSHOT</google-oauth.version>
     <java.level>8</java.level>
     <pipeline-model-definition.version>1.3.8</pipeline-model-definition.version>
     <concurrency>5</concurrency>
@@ -127,7 +130,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>14.0.1</version>
+      <version>${google.guava.version}</version>
     </dependency>
     <!-- org.joda.time -->
     <dependency>
@@ -159,7 +162,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>google-oauth-plugin</artifactId>
-      <version>0.9</version>
+      <version>${google-oauth.version}</version>
     </dependency>
     <!-- Metadata dependency -->
     <dependency>
@@ -172,7 +175,13 @@
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-storage</artifactId>
-      <version>v1-rev155-${google.api.version}</version>
+      <version>v1-rev158-${google.api.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.http-client</groupId>
+          <artifactId>google-http-client</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
