Removed integrations tests execution by default
The current integration tests require a specific google infra to be
available. Preventing them to be executed by default prevents false
failure to happen.

In Maven lifecycle, verify comes after package. Executing one shell with
package and another one with verify re-execute unit-tests for nothing.
Finxing this by calling only once verify phase.

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
     <java.level>8</java.level>
     <pipeline-model-definition.version>1.3.8</pipeline-model-definition.version>
     <concurrency>5</concurrency>
+    <skipIts>true</skipIts>
     <fasterxml.jackson.version>2.10.0</fasterxml.jackson.version>
   </properties>
 
@@ -334,6 +335,7 @@
           </execution>
         </executions>
         <configuration>
+          <skipITs>${skipIts}</skipITs>
           <disableXmlReport>true</disableXmlReport>
           <useFile>false</useFile>
         </configuration>
